fixed side scrolling bug on mobile safari

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
     font-family: Roboto, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    overflow-y: hidden;
+    overflow: hidden;
     color: white;
 }
 ::-moz-selection {
